--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "angular": "~1.3.14",
     "jquery": "~2.1.3",
-    "modernizr": "~2.8.3"
+    "modernizr": "~2.8.3",
+    "jasmine-jquery": "~2.1.0"
   },
   "private": true
 }
