--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
   "devDependencies": {
     "grunt": "~0.4.0",
     "grunt-contrib-cssmin": "*",
+    "grunt-contrib-jasmine": "^0.8.2",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-sass": "*",
     "grunt-contrib-uglify": "*",
     "grunt-contrib-watch": "*",
     "grunt-cssc": "*",
     "grunt-htmlhint": "*",
+    "grunt-jsdoc": "^0.5.8",
+    "jasmine": "^2.2.1",
     "matchdep": "*"
+  },
+  "dependencies": {
+    "jsdoc": "^3.3.0-beta1"
   }
 }
